# github-scraping-exercise

./: .env.sample  .gitignore  README.md
backend/: pyproject.toml
backend/RepoData/: apps.py  exceptions.py  models.py  serializers.py  urls.py  views.py
backend/RepoData/middleware/: database_exception_middleware.py
backend/RepoData/migrations/: 0001_initial.py  0002_alter_repository_description.py  0002_repository_etag_repository_page_number_and_more.py  0003_alter_repository_description_and_more.py
backend/RepoData/services/: __init__.py  abstract_github_service.py  github_api_service.py  github_repositories_service.py  github_service_interface.py  repository_service.py  user_service.py
backend/RepoData/tests/: test_models.py  test_repository_service.py  test_repository_view.py  test_user_repository_view.py  test_user_view.py
backend/RepoData/tests/test_views/: test_user_view.py
backend/RepoData/views/: __init__.py  healthcheck_view.py  repository_view.py  user_repository_view.py  user_view.py
backend/backend/: settings.py  urls.py
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.css  App.js
client/src/components/: Landing.js  NavBar.js  PaginationComponent.js  RepositoriesTable.js  SearchForm.js  UserRepositoriesSearchForm.js  UsersTable.js
client/src/hooks/: useAlert.js  useApi.js
client/src/layouts/: PageLayout.js
client/src/pages/: LandingPage.js  RecentUsersPage.js  StarredProjectsPage.js  UserRepositoriesPage.js
client/src/utils/: formatTime.js
